@@ -127,6 +127,15 @@ class RawPage {
 			$url = $_SERVER['PHP_SELF'];
 		}
 
+		if( $url == '' ) {
+			# This will make the next check fail with a confusing error
+			# message, so we should mention it separately.
+			wfHttpError( 500, 'Internal Server Error',
+				"\$_SERVER['PHP_SELF'] is not set.  Perhaps you're using CGI" .
+				" and haven't set cgi.fix_pathinfo = 1 in php.ini?" );
+			return;
+		}
+
 		if( strcmp( $wgScript, $url ) ) {
 			# Internet Explorer will ignore the Content-Type header if it
 			# thinks it sees a file extension it recognizes. Make sure that
